--- a/vignettes/Create_1KG_GDS_File.Rmd
+++ b/vignettes/Create_1KG_GDS_File.Rmd
@@ -447,10 +447,10 @@ library(RAIDS)
 gds <- snpgdsOpen(fileGDS1kg)
 
 ## The VCF file that will be created
-fileOUT <- "SNPretained.VCF"
+fileOut <- "SNPretained.VCF"
 
 ## Generate the VCF with the retained SNP position
-snvListVCF(gdsReference=gds, fileOUT=fileOUT, offset=1, freqCutoff=NULL)
+snvListVCF(gdsReference=gds, fileOut=fileOut, offset=1, freqCutoff=NULL)
 
 ## Close the 1KG GDS file
 closefn.gds(gds)
@@ -465,12 +465,12 @@ In a terminal:
 ## This in not a R script
 ## This script is in bash
 
-## Compress the new VCF file (fileOUT parameter)
-bgzip fileOUT
+## Compress the new VCF file (fileOut parameter)
+bgzip fileOut
 
 ## Index the new VCF file
 ## HTSlib software is needed
-tabix -p vcf fileOUT.gz
+tabix -p vcf fileOut.gz
 ```
 
 
