--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -110,21 +110,18 @@ This is an overview of genetic ancestry inference from cancer-derived
 molecular data:
 
 ```{r graphMainSteps, echo=FALSE, fig.align="center", fig.cap="An overview of the genetic ancestry inference process.", out.width='120%', results='asis', warning=FALSE, message=FALSE}
-knitr::include_graphics("MainSteps_v03.png")
+knitr::include_graphics("MainSteps_v04.png")
 ```
 
 The main steps are:
 
-1. Format reference data from the population reference dataset (optional)
-2. Format cancer-derived data set starting from BAM files
-3. Optimize ancestry inference parameters
-4. Infer ancestry for the subjects of the external study
+**Step 1.** Format reference data from the population reference dataset (optional)
 
-These main steps are described in detail in the following.
+**Step 2.1** Optimize ancestry inference parameters
 
-You can also run the steps from Step 2 Sub-step 4 to the end, with the 
-default parameters,
-in one command with the [wrapper](#wrapper) function.
+**Step 2.2** Infer ancestry for the subjects of the external study
+
+These steps are described in detail in the following.
 
 <br>
 <br>
@@ -133,7 +130,7 @@ in one command with the [wrapper](#wrapper) function.
 
 
 ```{r graphStep1, echo=FALSE, fig.align="center", fig.cap="Step 1 - Formatting the information from the population reference dataset (optional)", out.width='120%', results='asis', warning=FALSE, message=FALSE}
-knitr::include_graphics("MainSteps_Step1_v03.png")
+knitr::include_graphics("MainSteps_Step1_v04.png")
 ```
 
 
@@ -145,8 +142,10 @@ At this step three important reference files are created:
 - The population reference SNV Annotation GDS file
 - The population reference SNV Retained VCF file
 
-<span style="color:darkred;font-weight:bold">Note that these pre-processed 
-files are available for 1000 Genomes (1KG), in hg38, at:</span>
+<span style="color:darkred;font-weight:bold">The reference files associated to 
+the Cancer Research associated paper are available. Note that these 
+pre-processed files are for 1000 Genomes (1KG), in hg38. The files are 
+available here:/span>
 
 <span style="color:red">
 [https://labshare.cshl.edu/shares/krasnitzlab/aicsPaper](https://labshare.cshl.edu/shares/krasnitzlab/aicsPaper)
@@ -166,153 +165,16 @@ vignette.
 
 <br>
 
-## Step 2 - Prepare cancer-derived data for ancestry inference
 
-Molecular profiles in a cancer-derived data set must be formatted 
-following a series of sub-steps.
-
-```{r graphStep2, echo=FALSE, fig.align="center", fig.cap="Step 2 - Formatting the information from an external study", out.width='120%', results='asis', warning=FALSE, message=FALSE}
-knitr::include_graphics("MainSteps_Step2_v03.png")
-```
-
-<br>
-
-These sub-steps are:
-
-1. Create a directory containing the 3 reference files from the population reference
-2. Make a SNP pileup file for each profile
-3. Create an RDS file containing information about the profiles
-
-Note that a mapped BAM file is needed for each sample (step 2). 
-The reference 
-genome used for the mapping must be the same as the one used to generate the
-population reference GDS file. 
-
-<br>
-
-### Sub-Step 2.1 Create a directory containing the 3 required reference files
-
-The 3 required reference files should be stored in the same directory. In the 
-example below, this directory is referred to as **pathReference**.
-
-For more information on creating your own reference files, 
-see the vignette 
-[Formatting the information from the population reference dataset (optional)](Create_1KG_GDS_file.html).
-
-<br>
-
-### Sub-Step 2.2 Generate a SNP pileup file (1 file per profile)
-
-A file containing the read counts for the reference and alternative 
-nucleotides at each SNP position present in the 
-**population reference GDS File ** must be created for each profile. 
-This file is refereed as a **Profile SNP pileup file**.
-
-
-```{r graphStep2SubStep2, echo=FALSE, fig.align="center", fig.cap="Generate a Profile SNP pileup file (1 file per profile)", out.width='100%', results='asis', warning=FALSE, message=FALSE}
-knitr::include_graphics("MainSteps_Step2_SubStep2_SNP-Pileup_v03.png")
-```
-
-
-The read counts can be extracted using different software such as Bioconductor 
-[RSamtools](https://bioconductor.org/packages/release/bioc/html/Rsamtools.html) 
-package [@Morgan2023] and 
-[snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode), 
-which is associated to the facets package [@Shen2016]
-
-
-The generic **Profile SNP pileup file** format is coma separated and the 
-mandatory columns are:
-
-* _Chromosome_: The name of the chromosome
-* _Position_: The position on the chromosome
-* _Ref_: The reference nucleotide
-* _Alt_: The aternative nucleotide
-* _Count_: The total count
-* _File1R_: The count for the reference nucleotide
-* _File1A_: The count for the alternative nucleotide
-
-Beware that the starting position in the **population reference GDS File** is 
-zero (like BED files). The **Profile SNP pileup file** should also start 
-at position zero.
-
-Note that the name assigned to the **Profile SNP pileup file** has to 
-correspond to the profile identifier (Name.ID) in the following analysis. 
-For example, a SNP pileup file called "Sample.01.txt.gz" would be 
-associated to the "Sample.01" profile. 
-
-<br>
-
-### Sub-Step 2.3 Create a Profile PED RDS file containing the information about the profiles
-
-An RDS file describing all the profiles to be analyzed 
-is required.
-
-The PED RDS file must contain a *data.frame* with these 5 columns: 
-
-- _Name.ID_: The unique sample identifier. The profile VCF file  
-should be called "Name.ID.txt.gz". 
-- _Case.ID_: The patient identifier associated to the sample.
-- _Sample.Type_: The information about the profile tissue source 
-(primary tumor, metastatic tumor, normal, etc..). 
-- _Diagnosis_: The donor's diagnosis.
-- _Source_: The source of the profile sequence data (example: dbGAP_XYZ).
-
-Important: The row names of the *data.frame* must be the profiles' **Name.ID**.
-
-This file is referred to as the **Profile PED RDS file** (PED for pedigree). 
-Alternatively, the PED information can be saved in another type of 
-file (CVS, etc..) as long as the *data.frame* information can be regenerated 
-in R (with _read.csv()_ or else). 
-
-
-```{r pedCreation, echo=TRUE, warning=FALSE, message=FALSE}
-##############################################################
-## Location of the Profile PED RDS file to be created
-##############################################################
-dataDir <- system.file("extdata", package="RAIDS")
-demoPEDFile <- file.path(dataDir, "Demo_PED.RDS")
-
-##############################################################
-## Create a data frame with the mandatory columns
-## All columns are in character string format (no factor)
-##############################################################
-pedDF <- data.frame(Name.ID=c("Sample_01", "Sample_02", "Sample_03"),
-                    Case.ID=c("Patient_h11", "Patient_h12", "Patient_h18"), 
-                    Sample.Type=rep("Primary Tumor", 3),
-                    Diagnosis=rep("Cancer", 3),
-                    Source=rep("Databank B", 3),
-                    stringsAsFactors=FALSE)
-
-##############################################################
-## The row names must correspond to the name of the profiles
-##############################################################
-rownames(pedDF) <- pedDF$Name.ID
-
-##############################################################
-## Save the data frame into a RDS file
-##############################################################
-saveRDS(object=pedDF, file=demoPEDFile)
-
-## Remove RDS file (created for demo purpose)
-rm(demoPEDFile)
-```
-
-<br>
-
-## Final Step - Wrapper function to run ancestry inference in one command
+## Step 2 - Wrapper function to run ancestry inference in one command
 
 The final step can be run with a wrapper function
 that encapsulates multiple steps of the workflow.
 
 ```{r graphWrapper, echo=FALSE, fig.align="center", fig.cap="Final step - The wrapper function encapsulates multiple steps of the workflow.", out.width='120%', results='asis', warning=FALSE, message=FALSE}
-knitr::include_graphics("MainSteps_Wrapper_v03.png")
+knitr::include_graphics("MainSteps_Wrapper_v04.png")
 ```
-
-As a complement, the companion vignette 
-[Ancestry Inference Step by Step (optional)](Ancestry_Inference_Step_by_Step.html) 
-describes all steps covered by the wrapper function. 
-
+ 
 In summary, the wrapper function generates the synthetic dataset and uses it 
 to selected the optimal parameters before calling the genetic ancestry on 
 the current profiles.
@@ -333,6 +195,48 @@ also required. The *data.frame* must contain those 3 columns:
 - _study.desc_: The description of the study.
 - _study.platform_: The type of sequencing (example: RNA-seq).
 
+The required **population reference GDS file** and 
+**population reference SNV Annotation GDS file** should be stored in the same
+directory. In the example below, this directory is referred to 
+as **pathReference**.
+
+The generic **Profile SNP pileup file** format is coma separated and the 
+mandatory columns are:
+
+* _Chromosome_: The name of the chromosome
+* _Position_: The position on the chromosome
+* _Ref_: The reference nucleotide
+* _Alt_: The aternative nucleotide
+* _Count_: The total count
+* _File1R_: The count for the reference nucleotide
+* _File1A_: The count for the alternative nucleotide
+
+Beware that the starting position in the **population reference GDS File** is 
+zero (like BED files). The **Profile SNP pileup file** should also start 
+at position zero.
+
+Note that the name assigned to the **Profile SNP pileup file** has to 
+correspond to the profile identifier (Name.ID) in the following analysis. 
+For example, a SNP pileup file called "Sample.01.txt.gz" would be 
+associated to the "Sample.01" profile.
+
+The **Profile PED RDS file** must contain a *data.frame* describing all 
+the profiles to be analyzed. These 5 mandatory columns: 
+
+- _Name.ID_: The unique sample identifier. The profile VCF file  
+should be called "Name.ID.txt.gz". 
+- _Case.ID_: The patient identifier associated to the sample.
+- _Sample.Type_: The information about the profile tissue source 
+(primary tumor, metastatic tumor, normal, etc..). 
+- _Diagnosis_: The donor's diagnosis.
+- _Source_: The source of the profile sequence data (example: dbGAP_XYZ).
+
+Important: The row names of the *data.frame* must be the profiles' **Name.ID**.
+
+This file is referred to as the **Profile PED RDS file** (PED for pedigree). 
+Alternatively, the PED information can be saved in another type of 
+file (CVS, etc..) as long as the *data.frame* information can be regenerated 
+in R (with _read.csv()_ or else). 
 
 ```{r runExomeAncestry, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
 #########################################################################
@@ -365,16 +269,21 @@ fileAnnotGDS <- file.path(pathReference, "exAnnot1kg.gds")
 
 #########################################################################
 ## The Sample SNP pileup files (one per sample) need
-## to be located in the same directory.
+## to be all located in the same directory.
 #########################################################################
 pathGeno <- file.path(dataDir, "example", "snpPileup")
 
 #########################################################################
 ## The path where the Sample GDS files (one per sample)
-## will be created need to be specified.
+## will be created needs to be specified.
 #########################################################################
 pathProfileGDS <- file.path(dataDir, "example", "out.tmp")
 
+
+#########################################################################
+## The path where the result files will be created needs to 
+## be specified
+#########################################################################
 pathOut <- file.path(dataDir, "example", "res.out")
 
 #########################################################################
