--- a/vignettes/Create_Reference_GDS_File.Rmd
+++ b/vignettes/Create_Reference_GDS_File.Rmd
@@ -48,11 +48,10 @@ set.seed(121444)
 This section explains in further details the format of the population 
 reference files that are required to run the ancestry inference tool. 
 
-Three different files are generated from a reference dataset:
+Two different files are generated from a reference dataset:
 
 - The Population Reference GDS File
 - The Population Reference SNV Annotation GDS file
-- The Population Reference SNV Retained VCF file
 
 The third file is only required for RNA ancestry inference. 
 
@@ -143,6 +142,10 @@ print(gdsRefAnnot)
 
 closefn.gds(gdsRefAnnot)
 ```
+
+
+<br>
+<br>
 
 
 # Pre-processed files, from 1000 Genomes in hg38, are available
