--- a/vignettes/Create_Reference_GDS_File.Rmd
+++ b/vignettes/Create_Reference_GDS_File.Rmd
@@ -45,7 +45,7 @@ set.seed(121444)
 
 
 
-This section explains in further details the format of the population 
+This vignette explains, in further details, the format of the population 
 reference files that are required to run the ancestry inference tool. 
 
 Two different files are generated from a reference dataset:
@@ -121,6 +121,9 @@ The mandatory fields are:
 <br>
 
 # Population Reference Annotation GDS file
+
+
+The *Population Reference Annotation GDS file* should contain TODO
 
 
 ```{r runRefAnnotGDS, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
