--- a/vignettes/Create_Reference_GDS_File.Rmd
+++ b/vignettes/Create_Reference_GDS_File.Rmd
@@ -114,7 +114,7 @@ The mandatory fields are:
 * **snp.AFR_AF**: a *numeric* value between 0 and 1 representing the allelic frequency of the alternative allele in the African population  for each of the SNVs present in the *snp.id* field
 * **snp.AMR_AF**: a *numeric* value between 0 and 1 representing the allelic frequency of the alternative allele in the American population  for each of the SNVs present in the *snp.id* field
 * **snp.SAS_AF**: a *numeric* value between 0 and 1 representing the allelic frequency of the alternative allele in the South Asian population  for each of the SNVs present in the *snp.id* field
-* **genotype**: a SNV genotypic *integer* *matrix* (i.e., the number of A alleles) in SNVs-major mode (number of Samples × number of SNvs) TODO validate mode type
+* **genotype**: a SNV genotypic *integer* *matrix* (i.e., the number of A alleles) with SNVs as rows and samples as columns (number of SNVs × number of Samples)
 * **sample.ref**: an *integer* indicating if the sample is retained to be used as reference (=1) or removed (=0) as related samples have to be discarded
 
 
@@ -153,7 +153,7 @@ The mandatory fields are:
 * **phase**: TODO
 * **block.annot**: a *data.frame* containing those columns:
     * **block.id**: a *character* string representing TODO
-    * **block.desc**: ! *character* string describing the block TODO
+    * **block.desc**: a *character* string describing the block TODO
 * **bloc**: TODO
 
 <br>
